# power-system-demos

./: .gitignore  IMPORT_MANIFEST.md  README.md
gscr/: .gitignore  CITATION.bib  CITATION.cff  README.md  README_zh.md  THIRD_PARTY.md  pyproject.toml  requirements.txt
gscr/cases/cepri36/: README.md
gscr/cases/cepri36/data/andes/: CEPRI36_andes.xlsx
gscr/cases/cepri36/outputs/: summary.json
gscr/cases/cepri36/outputs/andes/: summary.json
gscr/cases/cepri36/outputs/pmu/: fault_bus30_pmu.csv  load_bus50_pmu.csv
gscr/cases/cepri36/outputs/tables/: direct_eigenvalues.csv  fault_scenarios.csv  (+8 more)
gscr/cases/il200/: README.md
gscr/cases/il200/data/: IL200_ffr.xlsx  LICENSE.CURENT-demo
gscr/cases/il200/outputs/: summary.json
gscr/docs/: method.md  port_definition.md  psasp_export.md  results.md
gscr/notebooks/: analytical_gscr_walkthrough.ipynb
gscr/results/reference/: artifact_manifest.json  toy3_summary.json
gscr/scripts/: build_cepri36_andes_case.py  build_manifest.py  build_notebook.py  execute_notebook.py  identify_cepri36_psasp_export.py  run_cepri36_andes.py  run_cepri36_psasp.py  run_il200.py  run_toy3.py  validate_all.py
gscr/src/cepri36_gscr/: __init__.py  andes_case.py  andes_experiments.py  andes_reproduction.py  experiments.py  identification.py  model.py  psasp.py  reference.py  scenarios.py  validation.py
gscr/src/gscr_demo/: __init__.py  identification.py  metrics.py
gscr/src/il200_gscr/: __init__.py  experiments.py  identification.py  network.py  tds.py
gscr/tests/: test_cepri36.py  test_identification.py  test_il200.py
(+610 files in other folders)
